apps/capacitor/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: capacitor
  namespace: rpi-lab
spec:
  routes:
    - kind: Rule
      match: Host(`capacitor.int.draugelis.dev`)
      services:
        - kind: Service
          name: capacitor
          namespace: rpi-lab
          port: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  namespace: rpi-lab
spec:
  rules:
    - host: capacitor.int.draugelis.dev
